--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Folio Book websit </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <a href="#" class="navbar-logo">
+                <h2 class="logo-text">FolioBook</h2>
+            </a>
+        </nav>
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">About</a>
+
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Services</a>
+
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Portfolio</a>
+
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Booking</a>
+
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Contact</a>
+
+            </li>
+        </ul>
+    </header>
     
 </body>
 </html>
