--- a/index.html
+++ b/index.html
@@ -362,7 +362,45 @@
 </section>
 
 
+ 
+<!-- Contact Section -->
+<section id="contact" class="contact-section fade-in-section">
+    <div class="section-content">
+        <h2 class="section-title">Contact Us</h2>
+        <p class="section-subtitle">Have a project in mind? Let’s discuss it!</p>
 
+        <div class="contact-grid">
+            <!-- Contact Info -->
+            <div class="contact-info">
+                <div class="info-card">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <h3>Location</h3>
+                    <p>Tunis, Tunisia</p>
+                </div>
+                <div class="info-card">
+                    <i class="fas fa-envelope"></i>
+                    <h3>Email</h3>
+                    <p>contact@tuniservices.com</p>
+                </div>
+                <div class="info-card">
+                    <i class="fas fa-phone"></i>
+                    <h3>Phone</h3>
+                    <p>+216 12 345 678</p>
+                </div>
+            </div>
+
+            <!-- Contact Form -->
+            <form class="contact-form">
+                <input type="text" name="name" placeholder="Your Name" required />
+                <input type="email" name="email" placeholder="Your Email" required />
+                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit" class="cta-button submit-button">
+                    Send Message <i class="fas fa-paper-plane"></i>
+                </button>
+            </form>
+        </div>
+    </div>
+</section>
     </main>
     <script src="script.js"></script>
     
