--- a/index.html
+++ b/index.html
@@ -401,7 +401,70 @@
         </div>
     </div>
 </section>
+
     </main>
+    
+    <!-- Footer Section -->
+<footer class="footer-section">
+    <div class="section-content">
+        <div class="footer-grid">
+            <!-- Logo & Description -->
+            <div class="footer-brand">
+                <h2 class="logo-text">TuniServices</h2>
+                <p class="footer-description">
+                    We help businesses grow with modern digital solutions. From web development to cloud services, we build what the future needs.
+                </p>
+                <div class="footer-socials">
+                    <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="social-link"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+
+            <!-- Useful Links -->
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Technologies</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <!-- Services -->
+            <div class="footer-services">
+                <h3>Our Services</h3>
+                <ul>
+                    <li><a href="#">Web Development</a></li>
+                    <li><a href="#">Mobile App Development</a></li>
+                    <li><a href="#">Cybersecurity</a></li>
+                    <li><a href="#">Cloud Solutions</a></li>
+                    <li><a href="#">SEO & Analytics</a></li>
+                </ul>
+            </div>
+
+            <!-- Contact Info -->
+            <div class="footer-contact">
+                <h3>Contact Us</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Tunis, Tunisia</p>
+                <p><i class="fas fa-envelope"></i> contact@tuniservices.com</p>
+                <p><i class="fas fa-phone"></i> +216 12 345 678</p>
+            </div>
+        </div>
+
+        <!-- Bottom Bar -->
+        <div class="footer-bottom">
+            <p>&copy; 2025 TuniServices. All rights reserved.</p>
+            <div class="footer-bottom-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+            </div>
+        </div>
+    </div>
+</footer>
     <script src="script.js"></script>
     
 </body>
