mise ajour : ajouter formulaire for booking

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Booking</a>
+                <a href="formulaire.html" class="nav-link">Booking</a>
 
             </li>
             <li class="nav-item">
@@ -401,14 +401,15 @@ id="contact" class="contact-section fade-in-section">
             </div>
 
             <!-- Contact Form -->
-            <form class="contact-form">
-                <input type="text" name="name" placeholder="Your Name" required />
-                <input type="email" name="email" placeholder="Your Email" required />
-                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-                <button type="submit" class="cta-button submit-button">
-                    Send Message <i class="fas fa-paper-plane"></i>
-                </button>
-            </form>
+            <form id="contactForm" class="contact-form">
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit" class="cta-button submit-button">
+        Send Message <i class="fas fa-paper-plane"></i>
+    </button>
+</form>
+
         </div>
     </div>
 </section>
